# cbz-thumbnailer

./: Cargo.toml  cbz.thumbnailer  justfile
cbz-thumbnailer/: Cargo.toml
cbz-thumbnailer-lib/: Cargo.toml
cbz-thumbnailer-lib/src/: lib.rs
cbz-thumbnailer/src/: lib.rs
katalog-proxy/: Cargo.toml
katalog-proxy-lib/: Cargo.toml
katalog-proxy-lib/src/: lib.rs
katalog-proxy-thumbnailer/: Cargo.toml
katalog-proxy-thumbnailer/src/: lib.rs  main.rs
katalog-proxy/src/: lib.rs  main.rs
resources/: application-katalog-proxy.xml  katalog-proxy.desktop  katalog-proxy.thumbnailer
src/: main.rs
thumbnailer-common/: Cargo.toml
thumbnailer-common/src/: lib.rs
