[workspace]
members = [
	"cbz-thumbnailer",
	"cbz-thumbnailer-lib",
	"katalog-proxy",
	"katalog-proxy-lib",
]
default-members = ["cbz-thumbnailer"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
cbz-thumbnailer-lib = { path = "cbz-thumbnailer-lib" }
clap = "4.5.57"
color-eyre = "0.6.5"
env_logger = "0.11.8"
image = "0.25.9"
log = "0.4.29"
tap = "1.0.1"
thiserror = "2.0.18"
zip = "7.4.0"
either = "1.15.0"
katalog-proxy = { version = "0.1.0", path = "katalog-proxy" }
katalog-proxy-lib = { version = "0.1.0", path = "katalog-proxy-lib" }
open = "5.3.3"
serde = "1.0.228"
sha2 = "0.10.9"
toml = "1.0.0"
walkdir = "2.5.0"
hex = "0.4.3"

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"

