[package]
name = "cbz-thumbnailer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
env_logger.workspace = true
log.workspace = true
tap.workspace = true
cbz-thumbnailer-lib.workspace = true
