[package]
name = "katalog-proxy-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
sha2.workspace = true
tap.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true
