[package]
name = "katalog-proxy"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
env_logger.workspace = true
katalog-proxy-lib = { version = "0.1.0", path = "../katalog-proxy-lib" }
log.workspace = true
open = "5.3.3"
