[package]
name = "katalog-proxy"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
env_logger.workspace = true
katalog-proxy-lib.workspace = true
log.workspace = true
tap.workspace = true
open.workspace = true
either.workspace = true
